--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Dancer-Plugin-SecureHeaders
 
-0.1.0 31-Mar-2014
+1.0.1 05-May-2014
+        Added YAML as test PreReq for BSD
+
+1.0.0 31-Mar-2014
         Initial release.
 
